fixed scrollbar

--- a/src/components/TestimonialCard.css
+++ b/src/components/TestimonialCard.css
@@ -17,6 +17,11 @@
   overflow-y: scroll;
   padding: 10px;
 }
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
 .testimonialCard-wrapper p,
 .testimonialCard-wrapper h2 {
   font-family: "Advent Pro", sans-serif;
